<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contatos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detalhe">Detalhes</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="cidade">Cidade</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>

</resources>
